--- a/.github/workflows/funcapp-cicd.yml
+++ b/.github/workflows/funcapp-cicd.yml
@@ -5,10 +5,6 @@ on:
     branches: [ main ]
     paths:
       - 'ecovoice-app-backend/**'
-  pull_request:
-    branches: [ main ]
-    paths:
-      - 'ecovoice-app-backend/**'
 
 jobs:
   build-and-deploy:
@@ -20,20 +16,18 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '9.x'
+        dotnet-version: '9.0.x'
         
     - name: Build
       run: |
         cd ecovoice-app-backend
-        dotnet clean
-        dotnet restore --force
-        dotnet build --configuration Release --no-restore /p:GenerateWorkerExtensions=false
-        dotnet publish -c Release -o ./publish --no-build
-
+        dotnet build --configuration Release
+        dotnet publish -c Release -o ./publish
         
     - name: Deploy to Azure Function App
       uses: Azure/functions-action@v1
       with:
-        app-name: 'sri-ecovoice-funcapp'
+        app-name: 'sri-ecovoice-funcapp
+'
         package: './ecovoice-app-backend/publish'
         publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
