--- a/ecovoice-app-backend/EcoVoiceFunctionApp.csproj
+++ b/ecovoice-app-backend/EcoVoiceFunctionApp.csproj
@@ -5,6 +5,7 @@
 		<OutputType>Exe</OutputType>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+	    <GenerateWorkloadProjectFile>false</GenerateWorkloadProjectFile>
 	</PropertyGroup>
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
