--- a/.github/workflows/funcapp-cicd.yml
+++ b/.github/workflows/funcapp-cicd.yml
@@ -16,15 +16,11 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '9.0.x'
-    - name: Prepare Build
-      run: |
-          cd ecovoice-app-backend
-          rm -rf obj bin       
+        dotnet-version: '9.0.x'   
     - name: Build
       run: |
         cd ecovoice-app-backend
-        dotnet publish -c Release
+        dotnet publish -c Release -o ./publish
         
     - name: Deploy to Azure Function App
       uses: Azure/functions-action@v1
